overflow issue is footer, sizing needs to be adjust but outer container and overflow hidden means it doesn't mess up other things for now

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -217,11 +217,11 @@ a,
 li {
   letter-spacing: 0.2rem;
   font-family: $bodyFont;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 150%;
   color: black;
   font-weight: 400;
-  padding: 20px;
+  padding: 5px;
   @include media-query-min($sm) {
     font-size: calc(16px + 2 * ((100vw - 320px) / 680));
   }
@@ -280,12 +280,12 @@ h3,
 .h3 {
   letter-spacing: 0.2rem;
   color: $gusGreen;
-  font-size: 5.2rem;
+  font-size: 2.6rem;
   font-weight: 900;
   line-height: 135%;
 
   @include media-query-min($sm) {
-    font-size: calc(26px + 26 * ((100vw - 320px) / 680));
+    font-size: calc(2.6rem + 10 * ((100vw - 320px) / 680));
   }
 
   @include media-query-min($md) {
